tests/fixtures/errors/invalid_pragma_missing_body.puml
@startuml
!pragma
A -> B: hello
@enduml
